Changing to stable in composer

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
 			"Dabbie\\": "src/"
 		}
 	},
-	"minimum-stability": "beta",
+	"minimum-stability": "stable",
 	"require": {
 		"php": ">=5.6"
 	}
