--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
 	],
 	"autoload": {
 		"psr-4": {
-			"Dabbie\\": "src/"
+			"Dabbie\\": "src/",
+			"ext-pdo": "*",
+			"ext-pdo_mysql": "*"
 		}
 	},
 	"minimum-stability": "stable",
